# pubky-messenger

./: Cargo.toml  README.md  architecture.md
examples/: basic_usage.rs  conversation.rs  get_info.rs  read_messages.rs  send_message.rs
src/: client.rs  crypto.rs  lib.rs  message.rs
src/src/: client.rs  crypto.rs  lib.rs  message.rs
tests/: integration_test.rs  test_delete_methods.rs  test_recovery_phrase.rs
